Fix invalid DCHECK in EmbeddedApplicationRunner

ThreadChecker checks that ShellClient messages are dispatched
on the app thread, but we weren't detaching it when spinning up
a new thread for the app.

So start -> shutdown -> start would incorrectly hit a DCHECK.

This fixes that.

BUG=614554
R=xhwang@chromium.org
TBR=ben@chromium.org

Review-Url: https://codereview.chromium.org/2007383002
Cr-Commit-Position: refs/heads/master@{#395974}

Former-commit-id: ff6d1d6cc9d46baa42c0c10fb062ea9af4227f26